[package]
name = "reru"
version = "0.1.0"
edition = "2024"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reru"
crate-type = ["cdylib"]

[dependencies]
dashmap = "6.1.0"
fancy-regex = "0.17.0"
once_cell = "1.21.3"
pyo3 = { version = "0.27.2", features = [ "generate-import-lib" ] }
regex = "1.12.2"
